# yds.py

./: LICENSE  README.md  pyproject.toml
src/yds/: __init__.py  axisarray.py  tupledict.py
tests/: test_axisarray.py  test_tupledict.py
